--- a/index.html
+++ b/index.html
@@ -3,80 +3,136 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For Solehin</title>
+    <title>For Solehin 🦈</title>
     <style>
+        :root {
+            --sea-blue: #e0f7fa;
+            --heart-red: #ff4d6d;
+            --dark-text: #c9184a;
+        }
+
         body {
-            background-color: #fff5f5;
+            background-color: var(--sea-blue);
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
             margin: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
+            font-family: 'Segoe UI', Roboto, sans-serif;
+            overflow: hidden;
         }
 
-        /* The Tulip Art */
-        .flower {
-            position: relative;
+        /* Shark Styling */
+        #shark-container {
+            cursor: pointer;
+            text-align: center;
+            transition: transform 0.3s ease;
+            user-select: none;
         }
-        .tulip {
-            position: relative;
-            width: 50px;
-            height: 60px;
-            background: #ff4d6d;
-            border-radius: 50% 50% 50% 50% / 80% 80% 20% 20%;
-            margin: 0 auto;
+
+        #shark-display {
+            font-size: 100px;
+            display: block;
+            animation: float 3s ease-in-out infinite;
         }
-        .stem {
-            width: 5px;
-            height: 100px;
-            background: #2d6a4f;
-            margin: 0 auto;
+
+        .tap-instruction {
+            color: #0077b6;
+            font-weight: bold;
+            margin-top: 10px;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            font-size: 14px;
         }
 
         /* The Memo Card */
-        .memo {
+        #memo {
+            display: none; /* Hidden at first */
             background: white;
             padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.05);
+            border-radius: 20px;
+            box-shadow: 0 15px 30px rgba(0,0,0,0.1);
             margin-top: 20px;
             max-width: 300px;
-            border: 1px dashed #ffb3c1;
+            border: 2px dashed var(--heart-red);
+            animation: slideUp 0.8s ease-out;
         }
 
         h1 {
-            color: #c9184a;
+            color: var(--dark-text);
             font-size: 1.5rem;
             line-height: 1.4;
+            margin: 10px 0 0 0;
         }
 
-        .heart {
-            color: #ff4d6d;
-            font-size: 2rem;
-            animation: beat 1s infinite;
+        .heart-icon {
+            font-size: 30px;
+            color: var(--heart-red);
         }
 
-        @keyframes beat {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.1); }
-            100% { transform: scale(1); }
+        /* Animations */
+        @keyframes float {
+            0%, 100% { transform: translateY(0) rotate(0deg); }
+            50% { transform: translateY(-20px) rotate(5deg); }
+        }
+
+        @keyframes slideUp {
+            from { opacity: 0; transform: translateY(50px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        /* Bubbles background effect */
+        .bubble {
+            position: absolute;
+            bottom: -20px;
+            background-color: rgba(255, 255, 255, 0.5);
+            border-radius: 50%;
+            animation: rise 5s infinite ease-in;
+            z-index: -1;
+        }
+
+        @keyframes rise {
+            from { bottom: -20px; opacity: 0.7; }
+            to { bottom: 100vh; opacity: 0; }
         }
     </style>
 </head>
 <body>
 
-    <div class="flower">
-        <div class="tulip"></div>
-        <div class="stem"></div>
+    <div id="shark-container" onclick="revealValentine()">
+        <div id="shark-display">🦈</div>
+        <p class="tap-instruction" id="hint">Tap me!</p>
     </div>
 
-    <div class="memo">
-        <div class="heart">❤️</div>
+    <div id="memo">
+        <span class="heart-icon">❤️</span>
         <h1>Dear Solehin, <br> will you be my Valentine?</h1>
     </div>
 
-</body>
-</html>
+    <script>
+        function revealValentine() {
+            // Change the shark to holding flowers
+            const shark = document.getElementById('shark-display');
+            const hint = document.getElementById('hint');
+            const memo = document.getElementById('memo');
+
+            // Update content
+            shark.innerHTML = "🦈💐"; // Shark now has a bouquet
+            hint.style.display = "none"; // Hide "Tap me"
+            
+            // Show the memo
+            memo.style.display = "block";
+
+            // Add some "celebration" scaling
+            shark.style.animation = "none";
+            shark.style.transform = "scale(1.2)";
+        }
+
+        // Add some background bubbles for the "sea" vibe
+        function createBubble() {
+            const bubble = document.createElement('div');
+            bubble.className = 'bubble';
+            const size = Math.random() * 20 + 10 + "px";
+            bubble.style.width = size;
+            bubble.style.height = size;
